foreground and background

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEWPARAFLEX</title>
-    <link rel="stylesheet" href="para.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="wrapper">
        <div class="container">
-        <img src="mount.jpg" class="back">
-        <img src="msg2108069840-452-removebg-preview.png" class="fore">
+        <img src="background.jpg" class="back">        <!--background image -->
+        <img src="foreground.png" class="fore">        <!--foreground image -->
         <h1 id="h1">ADVENTURE</h1>
        </div>
           
